# web-form-datacollection

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT_WORKFLOW.md  ENVIRONMENT_CONFIGURATION.md  ENVIRONMENT_CONFIGURATION_SUMMARY.md  FRONTEND_DEPLOYMENT_SUMMARY.md  QUICK_START_CONFIGURATION.md  README.md  SECURITY_VALIDATION_SUMMARY.md  Taskfile.yml  cdk.json  output.json  pytest.ini  requirements-heating.txt  requirements.txt  taskfile.env
.claude/: settings.json
SammelBox/: vis-heating-feature-list.txt
backend/: .env.example  pyproject.toml
backend/data/: vis-heating-feature-list.txt
backend/src/backend/: __init__.py  config.py
backend/src/backend/api_auth/: __init__.py  auth.py
backend/src/backend/heating/: __init__.py
backend/src/backend/heating/iot_data/: __init__.py  feature_data_fetcher.py  feature_value_cli.py  get_iot_config.py  heating_values.py
backend/src/backend/iot_data/: __init__.py  feature_data_fetcher.py  feature_extractors.py  feature_value_cli.py  get_iot_config.py  heating_values.py
backend/src/backend/shared/: __init__.py  config.py  models.py  validators.py
backend/src/backend/viessmann/: __init__.py  viessmann_submit.py
backend/src/backend/viessmann/api_auth/: auth.py
docs/: APPLICATION_STATUS_REPORT.md  ARCHITECTURE.md  CHECKPOINT_VERIFICATION.md  DATALAKE_BACKUP.md  (+11 more)
vis-connect/: .env.example  pyproject.toml
vis-connect/python-auth/: .env.example  README.md  auth.py  get_iot_config.py
vis-connect/src/vis_connect/: __init__.py
vis-connect/src/vis_connect/python_auth/: __init__.py  auth.py  config.py  get_iot_config.py
(+171 files in other folders)
