[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name uses a hyphen; import package will be `backend`.
name = "backend"
version = "0.0.0"
description = "Viessmann Vis-Connect backend (Python)"
requires-python = ">=3.10"
dependencies = ["requests", "python-dotenv>=1.0"]

[project.scripts]
api-auth = "backend.api_auth.auth:main"
iot-data-config = "backend.iot_data.get_iot_config:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["backend*"]
